@@ -1,17 +1,18 @@
 require 'drb/drb'
+require 'set'
 
 class Meteor < ActiveRecord::Base
   class Shooter
     COUNTERS = [:count, :count_with]
     LISTINGS = [:listeners, :listeners_with, :channels, :signatures]
-    ROUNDROBINS = [:signature]
+    EITHEROFS = [:signature]
     MAX_RETRY = 10
     DEFAULT_SHOOTER_URI = 'druby://localhost:7123'
 
     def initialize(config)
       config['shooting_star'] ||= {'shooter' => DEFAULT_SHOOTER_URI}
       uris = config['shooting_star']['shooter']
-      @shooters = [uris].flatten.map{|uri| DRbObject.new_with_uri(uri)}
+      @shooters = [uris].flatten.map{|uri| DRbObject.new(nil, uri)}
     end
 
     COUNTERS.each do |m|
@@ -22,8 +23,8 @@ class Meteor < ActiveRecord::Base
       eval "def #{m}(*a, &b) call('#{m}',*a,&b).inject([]){|r,c|r.concat c} end"
     end
     
-    ROUNDROBINS.each do |m|
-      eval "def #{m}(*a, &b) round_robin('#{m}', *a, &b) end"
+    EITHEROFS.each do |m|
+      eval "def #{m}(*a, &b) round_robin('#{m}',*a,&b) end"
     end
 
     def method_missing(method, *args, &block)
@@ -36,7 +37,7 @@ class Meteor < ActiveRecord::Base
         begin
           result << shooter.__send__(method, *args, &block)
         rescue Exception => e
-          Meteor.logger.error "#{e.message}\n#{e.backtrace.join("\n")}"
+          Meteor::logger.error "#{e.message}\n#{e.backtrace.join("\n")}"
         end
         result
       end || []
@@ -46,18 +47,34 @@ class Meteor < ActiveRecord::Base
       @round_robin_counter = (@round_robin_counter.to_i + 1) % @shooters.size
       @shooters[@round_robin_counter].__send__(method, *args, &block)
     rescue Exception
-      (@retry_counter = @retry_counter.to_i + 1) < MAX_RETRY ? retry : raise
+      (@retry_counter = @retry_counter.to_i + 1) <= MAX_RETRY ? retry : raise
     end
+  end
+
+  def self.config
+    returning(configurations[RAILS_ENV]['shooting_star'] || {}) do |config|
+      config['server'] ||= 'localhost:8080'
+      config['shooter'] ||= 'druby://localhost:7123'
+    end
+  end
+
+  def self.servers
+    config['server'].kind_of?(Array) ? config['server'] : [config['server']]
+  end
+
+  def self.server
+    @round_robin_counter = (@round_robin_counter.to_i + 1) % servers.size
+    servers[@round_robin_counter]
   end
 
   def self.shooter
     @@shooter ||= DRb.start_service && Shooter.new(configurations[RAILS_ENV])
   end
 
-  def self.shoot(channel, javascript, tag = [])
+  def self.shoot(channel_path, javascript, tag = [], options = {})
     meteor = Meteor.new(:javascript => javascript)
     returning(meteor.save) do |succeeded|
-      shooter.shoot(channel, meteor.id, tag) if succeeded
+      shooter.shoot(channel_path, meteor.id, tag, options) if succeeded
     end
   end
 end
