@@ -1,0 +1,2 @@
+script/kill
+script/server -d
